--- a/backend/.env.example
+++ b/backend/.env.example
@@ -17,11 +17,11 @@ SECRET_KEY2=your_secret_key2
 # Database Configuration
 # =======================
 
-DB_NAME=your_database_name
-DB_USER=your_database_user
-DB_PASSWORD=your_database_password
-DB_HOST=localhost
-DB_PORT=your_database_port
+DB_NAME=QUANG_unionforhe
+DB_USER=QUANG_unionforhe
+DB_PASSWORD=e541ebded873959abfcf228c863ae5ac97c7df47
+DB_HOST=5-y2x.h.filess.io
+DB_PORT=3307
 
 # Enable SQL logging (set to 'true' to log, 'false' to disable)
 DB_LOGGING=false
